# credit-card-spend-summarizer

./: .env.example  KB_Credit_Card_Spend_Summarizer_Updated (4).md  KB_Credit_Card_Spend_Summarizer_Updated__5_.md  diagnose.py  main.py  pyproject.toml
.guardrails/: hub_registry.json
src/agents/: graph.py  nodes.py  prompts.py  schemas.py
src/api/v1/: chat.py  conversations.py  health.py  ingest.py  router.py
src/api/v1/agents/: graph.py  nodes.py  prompts.py  schemas.py
src/api/v1/core/: db.py  embeddings.py  guardrails.py  settings.py
src/api/v1/ingestion/: deduplication.py  docling_parser.py  ingestion.py
src/api/v1/retrieval/: fts_search.py  hybrid_search.py  reranker.py  vector_search.py
src/api/v1/routes/: chat.py  conversations.py  health.py  ingest.py  router.py
src/api/v1/services/: conversation_service.py  rag_service.py  sql_service.py
src/api/v1/tools/: customer_data_tool.py  kb_tools.py  knowledge_base_tool.py  spend_summary_tool.py  sql_tools.py
src/core/: db.py  embeddings.py  settings.py
src/ingestion/: deduplication.py  docling_parser.py  ingestion.py
src/retrieval/: fts_search.py  hybrid_search.py  reranker.py  schema.py  schemas.py  vector_search.py
src/services/: conversation_service.py  rag_service.py  sql_service.py
src/tools/: customer_data_tool.py  knowledge_base_tool.py  spend_summary_tool.py
ui/: api_client.py  app.py  state.py
ui/components/: chat.py  header.py  list_view.py
