[project]
name = "CREDIT_CARD_SPEND_SUMMARIZER"
version = "0.1.0"
description = "Credit Card Spend Summarizer with LangGraph agent, FastAPI, and RAG"
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "openai>=1.30.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.0",
    "docling>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "langchain-community>=0.4.2",
    "cohere>=7.0.3",
    "mistune>=3.2.1",
    "markdown>=3.10.2",
    "guardrails-ai>=0.10.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "msgpack>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
